--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
+h6 {
+  color: #ffdb6d;
+  text-align: center;
+  border: 3px solid;
+  border-color: #ffdb6d;
+  padding: 1rem;
+  background-color: #1d2531;
+}
+
 /* YOUR STYLES HERE */
